Fixed forget password template in mobile view

--- a/service-api/templates/emailTemplates/ForgetPassword.html
+++ b/service-api/templates/emailTemplates/ForgetPassword.html
@@ -2,18 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Reset password</title>
+	<title>Email Check In</title>
+	<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">-->
 	<style type="text/css">
-		.midd-content .gradient-part {
-			width: 520px;
-			padding: 40px;
+		body, td, input, textarea, select {
+			font-family: 'Avenir Next' !important;
+			/*font-family: 'Open Sans', sans-serif;*/
+		}
+
+		@font-face {
+			font-family: 'Avenir Next';
+			src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
+		}
+
+		.gradient-part {
 			color: #fff;
 			margin: auto;
-			background: rgb(27, 188, 197);
-			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+			background: rgb(45, 188, 198);
+			background: -moz-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: -webkit-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: linear-gradient(123deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc6', endColorstr='#1197ce', GradientType=1);
 		}
 
 		.default-gradient-color {
@@ -28,81 +37,51 @@
 			border-radius: 4px;
 		}
 
+		a {
+
+			color: #828fa0;
+			text-decoration: none;
+			text-align: left;
+		}
+
+		a:hover {
+			color: navy;
+			text-decoration: underline;
+		}
+
 	</style>
 </head>
-<body style="background-color: #fff;  margin: 0;  padding: 0;  font-family: 'Avenir Next';">
-<div class="wrapper" style="height: 100%;  width: 100%;  display: table;  position: absolute;">
-	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
-		<div class="gradient-part">
-			<table width="100%">
-				<tr>
-					<td class="" width="600" align="center">
-						<table cellpadding="0" cellspacing="0">
-							<tr>
-								<td class="column" width="433">
-									<table>
-										<tr>
-											<td width="100%" align="left" style="font-size: 22px; font-weight: 500;">
-												HI {{name.first}}
-												<!--<span style="display: block; margin-top: 7px; font-size: 22px; font-weight: 500;">How did it go Today?</span>-->
-											</td>
-										</tr>
-									</table>
-								</td>
-								<td class="column" width="90">
-									<table>
-										<tr>
-											<td class="border-radius-4" width="78" align="right"
-												style="/*background-color: #18b3d8;*/ color: #46c3df; padding:9px 11px; font-size: 24px; font-weight: 600; text-align: center;">
-												<img src="https://activepathways.co/images/logo_tr.png" style="height: 50px;" alt="" />
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-							<tr>
-								<td class="column" width="95%">
-									<table>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 34px; font-weight: 600; padding-top: 20px; padding-bottom: 30px;">
-												Forget your password? No problem!
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-							<tr>
-								<td class="column" width="100%">
-									<table>
-										<tr>
-											<td width="190" height="40" align="left" style="vertical-align: middle; text-align: center;">
-												<a href="{{link}}" style="cursor: pointer; font-size: 12px; font-weight: 300; padding: 0; margin-top: 30px; border-radius: 20px; text-align: center; background-color: #fff; color: #408bca;text-decoration: none;width: 190px;height: 40px;display: block;line-height: 40px;">
-												RESET PASSWORD
-												</a>
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-							<tr>
-								<td class="column" width="100%">
-									<table>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 15px; font-weight: 200; padding: 0; color: #fff; padding-top: 40px;">
-												-The Active pathways Team
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
+<body style="background-color: #fff;  margin: 0;  padding: 0">
+<div style="max-width: 600px; margin:auto;" class="gradient-part">
+	<table cellpadding="0" cellspacing="0" width="100%" style="padding:30px; display: table;">
+		<tr align="top" style="display: table; width: 100%;">
+			<td style="font-size: 24px; font-weight: 400; color: #fff; ">
+				HI {{username}}
+
+			</td>
+			<td align="right" valign="middle">
+				<img src="https://activepathways.co/images/logo_tr.png" style="height: 50px;" alt="">
+			</td>
+		</tr>
+		<tr>
+			<td align="left"
+				style="font-size: 32px; color: #fff; font-weight: 600; padding-top: 40px; padding-bottom: 10px;">
+				Forget your password? No problem!
+			</td>
+		</tr>
+		<tr>
+			<td align="left" style="float:left;">
+				<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 40px; border-radius: 20px; text-align: center; background-color: #fff; color: #468fcc;text-decoration: none;"
+				   href="{{link}}">RESET PASSWORD</a>
+			</td>
+		</tr>
+		<tr>
+			<td width="100%" align="left"
+				style="font-size: 16px; font-weight: 200; text-align: left; color: #fff;     padding: 0px 0 20px;">
+				-The Active pathways Team
+			</td>
+		</tr>
+	</table>
 </div>
 </body>
 </html>
