fixed welcome email template yahoo or outlook box

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -37,20 +37,22 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
-		 a {
+		a[href]{
 			
 			 color: #828fa0; 
 			 text-decoration: none;
+			transition: all .5s;
 		}
-		a:hover {
-			color: navy;
+		a[href]:hover {
+			color: #408bca;
 			text-decoration: underline;
+			/*font-weight: 300;*/
 		}
 
 	</style>
 </head>
-<body style="background-color: #fff;  margin: 0;  padding: 0">
-<div style="max-width: 600px; margin:auto;">
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" width="600">
+<div style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%; margin: 0 auto !important;padding: 0;background-color: #fff;height: 100%;width: 100%; max-width: 600px !important;">
 <table width="100%" cellpadding="0" cellspacing="0">
 	<tr>
 		<td class="" width="100%" align="center">
@@ -59,12 +61,12 @@
 					<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
     background-position: center;">
 					</td>-->
-					<td class="gradient-part" style="height: 186px; font-size: 34px; font-weight: 600; text-align: center; color: #fff;">
+					<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://image.ibb.co/nkZfJc/gradient_top_hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
 						Welcome to<br> Active Pathways!
 					</td>
 				</tr>
 				<tr align="top">
-					<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); height: 38px; width: 100%; background-position: top center;        background-size: 100% 100%;background-repeat: no-repeat;">
+					<td height="38" style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); width: 100%; background-position: top center; background-size: 100% 100%;background-repeat: no-repeat;">
 					</td>
 				</tr>
 				<tr align="top">
@@ -131,12 +133,6 @@
 									Multiply the fun. Invite your family and friends
 								</td>
 							</tr>
-							<!--<tr>
-								<td align="center">
-									<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
-									   href="https://activepathways.co">GET STARTED</a>
-								</td>
-							</tr>-->
 							<tr>
 								<td align="center"
 									style="border-top: 1px solid #eef3f8;">
@@ -152,7 +148,7 @@
 						</table>
 					</td>
 				</tr>
-				<tr style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); height: 92px; width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center;">
+				<tr height="92" style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center;">
 					<td>
 
 					</td>
