--- a/service-api/templates/emailTemplates/emailCheckIn.html
+++ b/service-api/templates/emailTemplates/emailCheckIn.html
@@ -15,7 +15,7 @@
 			src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
 		}
 
-		.gradient-part {
+	/*	.gradient-part {
 			color: #fff;
 			margin: auto;
 			background: rgb(45, 188, 198);
@@ -23,7 +23,7 @@
 			background: -webkit-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
 			background: linear-gradient(123deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc6', endColorstr='#1197ce', GradientType=1);
-		}
+		}*/
 
 		.default-gradient-color {
 			background: rgb(27, 188, 197);
@@ -52,7 +52,11 @@
 	</style>
 </head>
 <body style="background-color: #fff;  margin: 0;  padding: 0">
-<div style="max-width: 600px; margin:auto;" class="gradient-part">
+<div style="max-width: 600px; margin:auto; background: rgb(45, 188, 198);
+			background: -moz-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: -webkit-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: linear-gradient(123deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc6', endColorstr='#1197ce', GradientType=1);">
 	<table cellpadding="0" cellspacing="0" width="100%" style="padding:30px; display: table;">
 		<tr align="top" style="display: table; width: 100%;">
 			<td style="font-size: 24px; font-weight: 400; color: #fff; ">
