Developing programme email template html and fixed outlook or yahoo

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -37,17 +37,31 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
-		a[href]{
-			
-			 color: #828fa0; 
-			 text-decoration: none;
-			transition: all .5s;
+		a[href] {
+			color: #828fa0!important;
+			text-decoration: none;
+			transition: all .5s!important;
 		}
 		a[href]:hover {
-			color: #408bca;
+			color: #408bca!important;
 			text-decoration: underline;
-			/*font-weight: 300;*/
+			font-weight: 300!important;
+			
 		}
+		
+		.apple-link a {
+			color: inherit !important;
+			font-family: inherit !important;
+			font-size: inherit !important;
+			font-weight: inherit !important;
+			line-height: inherit !important;
+			text-decoration: none !important;
+		}
+		.apple-link a:hover {
+			color: #408bca!important;
+			font-weight: 300!important;
+		}
+		
 
 	</style>
 </head>
@@ -61,7 +75,7 @@
 					<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
     background-position: center;">
 					</td>-->
-					<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://image.ibb.co/nkZfJc/gradient_top_hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
+					<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://activepathways.co/images/gradient-top-hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
 						Welcome to<br> Active Pathways!
 					</td>
 				</tr>
@@ -114,16 +128,16 @@
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;"  class="apple-link">
 									<span style="text-align: center; border: 1px solid #408bca; color: #408bca; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
-									<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank" >Complete our wellbeing assessment</a>
+									<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank"  style="color: #828fa0; text-decoration: none !important;">Complete our wellbeing assessment</a>
 								</td>
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;" class="apple-link">
 									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #408bca; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-									<a href="https://www.facebook.com/getwalkers/)" target="_blank">Say hello in our Facebook page</a>
+									<a href="https://www.facebook.com/getwalkers/)" target="_blank" style="color: #828fa0; text-decoration: none !important;">Say hello in our Facebook page</a>
 								</td>
 							</tr>
 							<tr>
