--- a/service-api/templates/emailTemplates/programmeEmail.html
+++ b/service-api/templates/emailTemplates/programmeEmail.html
@@ -37,15 +37,31 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
-		a {
-
-			color: #828fa0;
+		a[href] {
+			color: #828fa0!important;
 			text-decoration: none;
+			transition: all .5s!important;
 		}
-		a:hover {
-			color: navy;
+		a[href]:hover {
+			color: #408bca!important;
 			text-decoration: underline;
+			font-weight: 300!important;
+
 		}
+
+		.apple-link a {
+			color: inherit !important;
+			font-family: inherit !important;
+			font-size: inherit !important;
+			font-weight: inherit !important;
+			line-height: inherit !important;
+			text-decoration: none !important;
+		}
+		.apple-link a:hover {
+			color: #408bca!important;
+			font-weight: 300!important;
+		}
+
 
 	</style>
 </head>
@@ -56,41 +72,65 @@
 			<td class="" width="100%" align="center">
 				<table cellpadding="0" cellspacing="0" width="100%">
 					<tr align="top">
-						<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
-        background-position: center;">
-                        </td>-->
 						<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://activepathways.co/images/gradient-top-hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
-							Ready? <br> You have a new challenge!
+							Active Pathways
 						</td>
 					</tr>
 					<tr align="top">
-						<td height="38" style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); width: 100%; background-position: top center;        background-size: 100% 100%;background-repeat: no-repeat;">
+						<td height="38" style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); width: 100%; background-position: top center; background-size: 100% 100%;background-repeat: no-repeat;">
 						</td>
 					</tr>
 					<tr align="top">
 						<td class=""
 							style="background-size: contain;    background-position: top center; background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
-							<table width="100%" cellpadding="0" cellspacing="0">
+							<table cellpadding="0" cellspacing="0">
 								<tr>
 									<td width="100%" align="left"
 										style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
-										HI {{userName}},
+										HI {{name.first}},
 									</td>
 								</tr>
 								<tr>
 									<td width="100%" align="left"
 										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0; font-family: 'Avenir Next';">
-										You have a new challenge ready
+										We hope you enjoyed our Starter Programme.
 
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
+										Our aim was to help you be more aware of your choices and help you identify new opportunities to be more active on your daily life.
+
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
+										Our mission is to help as many people to be more active, healthier and happier.
+
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #3d3d3d;">
+										As you, we are at the beginning of our Journey and we need your help to know if we are on the right track.
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;"  class="apple-link">
+										<span style="text-align: center; border: 1px solid #408bca; color: #408bca; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+										Today's challenge is to complete our short survey (< 1 minute) :-)
 									</td>
 								</tr>
 								<tr>
 									<td align="center">
 										<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; letter-spacing: 1px;
 										 padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff!important; text-decoration: none;"
-										   href="https://activepathways.co/">SHOW ME</a>
+										   href="https://www.surveymonkey.co.uk/r/P5SZ7PQ" target="_blank">Give feedback</a>
 									</td>
-                                </tr>
+								</tr>
 								<tr>
 									<td align="center"
 										style="border-top: 1px solid #eef3f8;">
@@ -99,6 +139,7 @@
 								<tr>
 									<td width="100%" align="left"
 										style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+										Thank you for joining!<br>
 										-The Active pathways Team
 									</td>
 								</tr>
