fix in login and signup

--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -13,7 +13,7 @@
               <div class="w-50 fl f4 fw5 navy tl">Sign Up</div>
               <div class="w-50 fr f6 fw6 blue tr mt2 pointer" @click.prevent="openSignIn($event)">SIGN IN</div>
             </div>
-            <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Please fill in this form to create an account.</p></div>
+            <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Please create an account to start an exciting journey for healthy future.</p></div>
             <form class="measure center">
               <fieldset class="ba b--transparent ph0 mh0 pb0 mt0 pt0">
                 <div class=" w-100 tl relative">
