--- a/service-api/templates/emailTemplates/emailNewChallenge.html
+++ b/service-api/templates/emailTemplates/emailNewChallenge.html
@@ -79,7 +79,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0; font-family: 'Avenir Next';">
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #5F5F5F; font-family: 'Avenir Next';">
 										You have a new challenge ready
 
 									</td>
