--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -135,7 +135,7 @@
 								<td width="100%" align="left"
 									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #5F5F5F;" class="apple-link">
 									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #5F5F5F; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-									<a href="https://www.facebook.com/getwalkers/)" target="_blank" style="color: #5F5F5F; text-decoration: underline !important;">Say hello in our Facebook page</a>
+									<a href="https://www.facebook.com/getwalkers" target="_blank" style="color: #5F5F5F; text-decoration: underline !important;">Say hello in our Facebook page</a>
 								</td>
 							</tr>
 							<tr>
