added verification link in welcome template. Fixed welcome template colors

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -45,9 +45,9 @@
 		a[href]:hover {
 			color: #408bca!important;
 			text-decoration: underline;
-			
+
 		}
-		
+
 		.apple-link a {
 			color: inherit !important;
 			font-family: inherit !important;
@@ -59,116 +59,122 @@
 		.apple-link a:hover {
 			color: #408bca!important;
 		}
-		
+
 
 	</style>
 </head>
 <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" width="600">
 <div style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%; margin: 0 auto !important;padding: 0;background-color: #fff;height: 100%;width: 100%; max-width: 600px !important;">
-<table width="100%" cellpadding="0" cellspacing="0">
-	<tr>
-		<td class="" width="100%" align="center">
-			<table cellpadding="0" cellspacing="0" width="100%">
-				<tr align="top">
-					<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
-    background-position: center;">
-					</td>-->
-					<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://activepathways.co/images/gradient-top-hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
-						Welcome to<br> Active Pathways!
-					</td>
-				</tr>
-				<tr align="top">
-					<td height="38" style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); width: 100%; background-position: top center; background-size: 100% 100%;background-repeat: no-repeat;">
-					</td>
-				</tr>
-				<tr align="top">
-					<td class=""
-						style="background-size: contain;    background-position: top center; background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
-						<table cellpadding="0" cellspacing="0">
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
-									HI {{name.first}},
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #5F5F5F; font-family: 'Avenir Next';">
-									Welcome to Active Pathways! We are thrilled that you joined our
-									programme. You’ve made first move towards a health and happier life.
+	<table width="100%" cellpadding="0" cellspacing="0">
+		<tr>
+			<td class="" width="100%" align="center">
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tr align="top">
+						<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
+        background-position: center;">
+                        </td>-->
+						<td height="186" style=" font-size: 34px; font-weight: 600; text-align: center; color: #fff; background-image:url(https://activepathways.co/images/gradient-top-hdremail.jpg);  background-position: top center; background-size:cover;background-repeat: no-repeat;">
+							Welcome to<br> Active Pathways!
+						</td>
+					</tr>
+					<tr align="top">
+						<td height="38" style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); width: 100%; background-position: top center; background-size: 100% 100%;background-repeat: no-repeat;">
+						</td>
+					</tr>
+					<tr align="top">
+						<td class=""
+							style="background-size: contain;    background-position: top center; background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
+							<table cellpadding="0" cellspacing="0">
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
+										HI {{name.first}},
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d; font-family: 'Avenir Next';">
+										Welcome to Active Pathways! We are thrilled that you joined our
+										programme. You’ve made first move towards a health and happier life.
 
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #5F5F5F;">
-									Active Pathways is an invitation to fully live the present moment, to
-									see the world
-									around you with new eyes and discover opportunities to exercise in your
-									daily routine.
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d;">
+										Active Pathways is an invitation to fully live the present moment, to
+										see the world
+										around you with new eyes and discover opportunities to exercise in your
+										daily routine.
 
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #5F5F5F;">
-									Get ready. You start tomorrow!
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #3d3d3d;">
+										Get ready. You start tomorrow!
 
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #5F5F5F;">
-									Before starting the programme,<br> we invite you to complete the
-									following
-									steps:
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #5F5F5F;"  class="apple-link">
-									<span style="text-align: center; border: 1px solid #408bca; color: #5F5F5F; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
-									<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank"  style="color: #828fa0; text-decoration: underline !important;">Complete our wellbeing assessment</a>
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #5F5F5F;" class="apple-link">
-									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #5F5F5F; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-									<a href="https://www.facebook.com/getwalkers" target="_blank" style="color: #5F5F5F; text-decoration: underline !important;">Say hello in our Facebook page</a>
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style=" padding-bottom: 20px; font-size: 17px; font-weight: 100; padding-top: 10px; color: #5F5F5F;">
-									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #5F5F5F; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
-									Multiply the fun. Invite your family and friends
-								</td>
-							</tr>
-							<tr>
-								<td align="center"
-									style="border-top: 1px solid #eef3f8;">
-								</td>
-							</tr>
-							<tr>
-								<td width="100%" align="left"
-									style="font-size: 14px; font-weight: 300; text-align: center; color: #5F5F5F;     padding: 25px 0 20px;">
-									Thank you for joining!<br>
-									-The Active pathways Team
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-				<tr height="92" style="background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center;">
-					<td>
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #3d3d3d;">
+										Before starting the programme,<br> we invite you to complete the
+										following
+										steps:
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #000;"  class="apple-link">
+										<span style="text-align: center; border: 1px solid #408bca; color: #3d3d3d; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+										<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank"  style="color: #828fa0; text-decoration: underline !important;">Complete our wellbeing assessment</a>
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #000;" class="apple-link">
+										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #3d3d3d; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
+										<a href="https://www.facebook.com/getwalkers" target="_blank" style="color: #3d3d3d; text-decoration: underline !important;">Say hello in our Facebook page</a>
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style=" padding-bottom: 20px; font-size: 17px; font-weight: 100; padding-top: 10px; color: #000">
+										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #3d3d3d; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
+										Multiply the fun. Invite your family and friends
+									</td>
+								</tr>
+								<tr>
+									<td align="center">
+										<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff !important; text-decoration: none;"
+										   href="{{verificationLink}}">CONFIRM EMAIL ADDRESS</a>
+									</td>
+								</tr>
+								<tr>
+									<td align="center"
+										style="border-top: 1px solid #eef3f8;">
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 14px; font-weight: 300; text-align: center; color: #5F5F5F;     padding: 25px 0 20px;">
+										Thank you for joining!<br>
+										-The Active pathways Team
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr height="92" style="background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center; ">
+						<td>
 
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
 </div>
 </body>
 </html>
