some color tweaks in templates

--- a/service-api/templates/emailTemplates/emailNewChallenge.html
+++ b/service-api/templates/emailTemplates/emailNewChallenge.html
@@ -79,7 +79,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #5F5F5F; font-family: 'Avenir Next';">
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d; font-family: 'Avenir Next';">
 										You have a new challenge ready
 
 									</td>
@@ -90,7 +90,7 @@
 										 padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff!important; text-decoration: none;"
 										   href="https://activepathways.co/">SHOW ME</a>
 									</td>
-                                </tr>
+								</tr>
 								<tr>
 									<td align="center"
 										style="border-top: 1px solid #eef3f8;">
