--- a/service-api/templates/emailTemplates/programmeEmail.html
+++ b/service-api/templates/emailTemplates/programmeEmail.html
@@ -98,14 +98,14 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0; font-family: 'Avenir Next';">
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d; font-family: 'Avenir Next';">
 										We hope you enjoyed our Starter Programme.
 
 									</td>
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d;">
 										Our aim was to help you be more aware of your choices and help you identify new
 										opportunities to be more active on your daily life.
 
@@ -113,7 +113,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
+										style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #3d3d3d;">
 										Our mission is to help as many people to be more active, healthier and happier.
 
 									</td>
@@ -127,9 +127,9 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;"
+										style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #000;"
 										class="apple-link">
-										<span style="text-align: center; border: 1px solid #408bca; color: #408bca; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+										<span style="text-align: center; border: 1px solid #408bca; color: #000; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
 										Today's challenge is to complete our short survey (< 1 minute) :-)
 									</td>
 								</tr>
