added missing text in email

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -147,6 +147,8 @@
 								</tr>
 								<tr>
 									<td align="center">
+										<br/><br/>
+										By clicking on the following link, you are confirming your email
 										<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff !important; text-decoration: none;"
 										   href="{{verificationLink}}">CONFIRM EMAIL ADDRESS</a>
 									</td>
