Fixed welcome amil and tweaked some colors

--- a/service-api/templates/emailTemplates/emailNewChallenge.html
+++ b/service-api/templates/emailTemplates/emailNewChallenge.html
@@ -79,16 +79,16 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #3d3d3d; font-family: 'Avenir Next';">
+										style="font-size: 17px; line-height: 1.6; font-weight: 400; padding-bottom: 20px; color: #3d3d3d; font-family: 'Avenir Next';">
 										You have a new challenge ready
 
 									</td>
 								</tr>
 								<tr>
 									<td align="center">
-										<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; letter-spacing: 1px;
+										<a style="font-size: 12px; font-weight: 400; width: 190px; display: block; letter-spacing: 1px;
 										 padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff!important; text-decoration: none;"
-										   href="https://activepathways.co/">SHOW ME</a>
+										   href="{{websiteUrl}}#/challenge/{{challengeId}}">SHOW ME</a>
 									</td>
 								</tr>
 								<tr>
@@ -98,7 +98,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+										style="font-size: 14px; font-weight: 400; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
 										-The Active pathways Team
 									</td>
 								</tr>
