--- a/service-api/templates/emailTemplates/ForgetPassword.html
+++ b/service-api/templates/emailTemplates/ForgetPassword.html
@@ -15,15 +15,7 @@
 			src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
 		}
 
-		.gradient-part {
-			color: #fff;
-			margin: auto;
-			background: rgb(45, 188, 198);
-			background: -moz-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
-			background: -webkit-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
-			background: linear-gradient(123deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc6', endColorstr='#1197ce', GradientType=1);
-		}
+
 
 		.default-gradient-color {
 			background: rgb(27, 188, 197);
@@ -52,7 +44,11 @@
 	</style>
 </head>
 <body style="background-color: #fff;  margin: 0;  padding: 0">
-<div style="max-width: 600px; margin:auto;" class="gradient-part">
+<div style="max-width: 600px; margin:auto; background: rgb(45, 188, 198);
+			background: -moz-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: -webkit-linear-gradient(-45deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			background: linear-gradient(123deg, rgba(45, 188, 198, 1) 0%, rgba(17, 151, 206, 1) 59%, rgba(17, 151, 206, 1) 99%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc6', endColorstr='#1197ce', GradientType=1);" class="gradient-part">
 	<table cellpadding="0" cellspacing="0" width="100%" style="padding:30px; display: table;">
 		<tr align="top" style="display: table; width: 100%;">
 			<td style="font-size: 24px; font-weight: 400; color: #fff; ">
@@ -71,13 +67,13 @@
 		</tr>
 		<tr>
 			<td align="left" style="float:left;">
-				<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 40px; border-radius: 20px; text-align: center; background-color: #fff; color: #468fcc;text-decoration: none;"
+				<a style="font-size: 12px; font-weight: 500; width: 190px; display: block; padding: 12px; margin: 30px auto 40px; border-radius: 20px; text-align: center; background-color: #fff; color: #468fcc;text-decoration: none;"
 				   href="{{link}}">RESET PASSWORD</a>
 			</td>
 		</tr>
 		<tr>
 			<td width="100%" align="left"
-				style="font-size: 16px; font-weight: 200; text-align: left; color: #fff;     padding: 0px 0 20px;">
+				style="font-size: 16px; font-weight: 300; text-align: left; color: #fff;     padding: 0px 0 20px;">
 				-The Active pathways Team
 			</td>
 		</tr>
